@@ -36,7 +36,7 @@ In alphabetical order (by last name)
 * Lachie Cox (Initial Rails support and diffing enhancements for Objects and custom formats)
 * Lindsay Evans (Patch for RSpec on Rails on Windows)
 * Jake Howerton (Port of Kevin Clark's ARTS to RSpec)
-* KAKUTANI Shintaro (Patch for coloured progress)
+* KAKUTANI Shintaro (Patch for coloured progress, Rails patches)
 * Rich Kilmer (Underscore syntactic sugar)
 * Riley Lynch (Patches for the rake task)
 * Pat Maddox (Patch for speccing of routes in Rails)
