@@ -13,4 +13,10 @@
   <%= render :partial => "person", :collection => @people %>
 </ul>
 
+<!-- this ul is generated using the :collection key with the :spacer_template
+     key in render :partial -->
+<ul>
+  <%= render :partial => "person", :collection => @people, :spacer_template => "person_spacer" %>
+</ul>
+
 <div id="a"></div>
