@@ -1,7 +1,7 @@
 require File.dirname(__FILE__) + '/../../spec_helper'
 
 context "/person/list" do
-  
+
   setup do
     @smith = mock("Smith")
     @jones = mock("Jones")
@@ -9,13 +9,13 @@ context "/person/list" do
     @jones.stub!(:name).and_return("Joe")
     assigns[:people] = [@smith, @jones]
   end
-  
+
   specify "should display the list of people" do
-    @smith.should_receive(:name).twice.and_return("Smith")
-    @jones.should_receive(:name).twice.and_return("Jones")
+    @smith.should_receive(:name).exactly(3).times.and_return("Smith")
+    @jones.should_receive(:name).exactly(3).times.and_return("Jones")
 
     render "/person/list"
-    
+
     response.should_have_tag 'li', :content => 'Name: Smith'
     response.should_have_tag 'li', :content => 'Name: Jones'
   end
@@ -24,5 +24,9 @@ context "/person/list" do
     render "/person/list"
     response.should_have_tag 'div', :attributes =>{:id => "a"}
   end
-  
+
+  specify "should have a <hr> tag with :id => 'spacer" do
+    render "/person/list"
+    response.should_have_tag 'hr', :attributes => {:id => "spacer"}
+  end
 end
