@@ -2,6 +2,7 @@
 
 == HEAD
 
+* Applied [#7010] Fixes :spacer_template does not work w/ view spec (patch from Shintaro Kakutani)
 * Applied [#6798] ensure two ':' in the first backtrace line for Emacs's 'next-error' command (patch from Kouhei Sutou)
 * Added Much nicer reports to generated website
 * Much nicer reports with --format --html (patch from Luke Redpath)
